--- a/pages/login.html
+++ b/pages/login.html
@@ -57,7 +57,7 @@
       }
       .links a {
         text-decoration: none;
-        color: #007bff;
+        color: #000000;
       }
       .links a:hover {
         text-decoration: underline;
