--- a/pages/detail.html
+++ b/pages/detail.html
@@ -1,82 +1,208 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Detail</title>
+    <title>상품 상세 페이지</title>
+    <style>
+      body {
+        font-family: sans-serif;
+        margin: 20px;
+      }
+      .product-image {
+        width: 300px;
+        float: left;
+        margin-right: 20px;
+      }
+      .product-details {
+        float: left;
+      }
+      .product-price {
+        font-size: 1.5em;
+        font-weight: bold;
+      }
+      .product-description {
+        margin-top: 20px;
+      }
+      .clearfix::after {
+        content: '';
+        clear: both;
+        display: table;
+      }
+    </style>
   </head>
   <body>
-    <ui>
-      <h1>쇼핑몰 상세 페이지</h1>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-    </ui>
-    <ui>
-      <h1>쇼핑몰 상세 페이지</h1>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-    </ui>
-    <ui>
-      <h1>쇼핑몰 상세 페이지</h1>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-    </ui>
-    <ui>
-      <h1>쇼핑몰 상세 페이지</h1>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-    </ui>
-    <ui>
-      <h1>쇼핑몰 상세 페이지</h1>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-    </ui>
-    <ui>
-      <h1>쇼핑몰 상세 페이지</h1>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-    </ui>
-    <ui>
-      <h1>쇼핑몰 상세 페이지</h1>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-    </ui>
-    <ui>
-      <h1>쇼핑몰 상세 페이지</h1>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-    </ui>
-    <ui>
-      <h1>쇼핑몰 상세 페이지</h1>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-    </ui>
+    <div class="clearfix">
+      <img
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQyW1OsDsCqavx6KAiH4kAIwC2VoH0lLXryiA&s"
+        alt="상품 이미지"
+        class="product-image"
+      />
+      <div class="product-details">
+        <h1>상품명</h1>
+        <p class="product-price">가격: 10,000원</p>
+        <p>상품 설명: 간단한 상품 설명입니다.</p>
+        <button>장바구니 담기</button>
+        <button>바로 구매</button>
+      </div>
+    </div>
+    <div class="product-description">
+      <h2>상세 정보</h2>
+      <p>
+        상품에 대한 자세한 설명입니다. 추가적인 이미지나 정보를 넣을 수
+        있습니다.
+      </p>
+    </div>
+    <div class="clearfix">
+      <img
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQyW1OsDsCqavx6KAiH4kAIwC2VoH0lLXryiA&s"
+        alt="상품 이미지"
+        class="product-image"
+      />
+      <div class="product-details">
+        <h1>상품명</h1>
+        <p class="product-price">가격: 10,000원</p>
+        <p>상품 설명: 간단한 상품 설명입니다.</p>
+        <button>장바구니 담기</button>
+        <button>바로 구매</button>
+      </div>
+    </div>
+    <div class="product-description">
+      <h2>상세 정보</h2>
+      <p>
+        상품에 대한 자세한 설명입니다. 추가적인 이미지나 정보를 넣을 수
+        있습니다.
+      </p>
+    </div>
+
+    <div class="clearfix">
+      <img
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQyW1OsDsCqavx6KAiH4kAIwC2VoH0lLXryiA&s"
+        alt="상품 이미지"
+        class="product-image"
+      />
+      <div class="product-details">
+        <h1>상품명</h1>
+        <p class="product-price">가격: 10,000원</p>
+        <p>상품 설명: 간단한 상품 설명입니다.</p>
+        <button>장바구니 담기</button>
+        <button>바로 구매</button>
+      </div>
+    </div>
+    <div class="product-description">
+      <h2>상세 정보</h2>
+      <p>
+        상품에 대한 자세한 설명입니다. 추가적인 이미지나 정보를 넣을 수
+        있습니다.
+      </p>
+    </div>
+
+    <div class="clearfix">
+      <img
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQyW1OsDsCqavx6KAiH4kAIwC2VoH0lLXryiA&s"
+        alt="상품 이미지"
+        class="product-image"
+      />
+      <div class="product-details">
+        <h1>상품명</h1>
+        <p class="product-price">가격: 10,000원</p>
+        <p>상품 설명: 간단한 상품 설명입니다.</p>
+        <button>장바구니 담기</button>
+        <button>바로 구매</button>
+      </div>
+    </div>
+    <div class="product-description">
+      <h2>상세 정보</h2>
+      <p>
+        상품에 대한 자세한 설명입니다. 추가적인 이미지나 정보를 넣을 수
+        있습니다.
+      </p>
+    </div>
+
+    <div class="clearfix">
+      <img
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQyW1OsDsCqavx6KAiH4kAIwC2VoH0lLXryiA&s"
+        alt="상품 이미지"
+        class="product-image"
+      />
+      <div class="product-details">
+        <h1>상품명</h1>
+        <p class="product-price">가격: 10,000원</p>
+        <p>상품 설명: 간단한 상품 설명입니다.</p>
+        <button>장바구니 담기</button>
+        <button>바로 구매</button>
+      </div>
+    </div>
+    <div class="product-description">
+      <h2>상세 정보</h2>
+      <p>
+        상품에 대한 자세한 설명입니다. 추가적인 이미지나 정보를 넣을 수
+        있습니다.
+      </p>
+    </div>
+
+    <div class="clearfix">
+      <img
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQyW1OsDsCqavx6KAiH4kAIwC2VoH0lLXryiA&s"
+        alt="상품 이미지"
+        class="product-image"
+      />
+      <div class="product-details">
+        <h1>상품명</h1>
+        <p class="product-price">가격: 10,000원</p>
+        <p>상품 설명: 간단한 상품 설명입니다.</p>
+        <button>장바구니 담기</button>
+        <button>바로 구매</button>
+      </div>
+    </div>
+    <div class="product-description">
+      <h2>상세 정보</h2>
+      <p>
+        상품에 대한 자세한 설명입니다. 추가적인 이미지나 정보를 넣을 수
+        있습니다.
+      </p>
+    </div>
+
+    <div class="clearfix">
+      <img
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQyW1OsDsCqavx6KAiH4kAIwC2VoH0lLXryiA&s"
+        alt="상품 이미지"
+        class="product-image"
+      />
+      <div class="product-details">
+        <h1>상품명</h1>
+        <p class="product-price">가격: 10,000원</p>
+        <p>상품 설명: 간단한 상품 설명입니다.</p>
+        <button>장바구니 담기</button>
+        <button>바로 구매</button>
+      </div>
+    </div>
+    <div class="product-description">
+      <h2>상세 정보</h2>
+      <p>
+        상품에 대한 자세한 설명입니다. 추가적인 이미지나 정보를 넣을 수
+        있습니다.
+      </p>
+    </div>
+
+    <div class="clearfix">
+      <img
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQyW1OsDsCqavx6KAiH4kAIwC2VoH0lLXryiA&s"
+        alt="상품 이미지"
+        class="product-image"
+      />
+      <div class="product-details">
+        <h1>상품명</h1>
+        <p class="product-price">가격: 10,000원</p>
+        <p>상품 설명: 간단한 상품 설명입니다.</p>
+        <button>장바구니 담기</button>
+        <button>바로 구매</button>
+      </div>
+    </div>
+    <div class="product-description">
+      <h2>상세 정보</h2>
+      <p>
+        상품에 대한 자세한 설명입니다. 추가적인 이미지나 정보를 넣을 수
+        있습니다.
+      </p>
+    </div>
   </body>
 </html>
