--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
     <script>
       window.onload = function () {
         document
-          .getElementById("loginBtn")
-          .addEventListener("click", function () {
-            window.location.href = "pages/login.html";
+          .getElementById('loginBtn')
+          .addEventListener('click', function () {
+            window.location.href = 'pages/login.html';
           });
         document
-          .getElementById("signUpBtn")
-          .addEventListener("click", function () {
-            window.location.href = "pages/signUp.html";
+          .getElementById('signUpBtn')
+          .addEventListener('click', function () {
+            window.location.href = 'pages/signUp.html';
           });
-        let products = document.getElementsByClassName("product");
+        let products = document.getElementsByClassName('product');
         for (let i = 0; i < products.length; i++) {
-          products[i].addEventListener("click", function () {
-            window.location.href = "pages/detail.html";
+          products[i].addEventListener('click', function () {
+            window.location.href = 'pages/detail.html';
           });
         }
       };
@@ -33,7 +33,7 @@
         <a href="#" class="userBtn">홈</a>
         <a href="#" class="userBtn">상품</a>
         <a href="#" class="userBtn">이벤트</a>
-        <a href="#" class="userBtn">고객센터</a>
+        <a href="./pages/service.html" class="userBtn">고객센터</a>
         <input
           type="button"
           name="login"
