--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
         <h3>맥북</h3>
         <p>₩1,900,000</p>
       </div>
+
+      <div class="product">
+        <h3>그램</h3>
+        <p>₩4,900,000</p>
+      </div>
     </div>
 
     <div class="footer">© 2025 MyShop. All rights reserved.</div>
